--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <!-- btn-primary-color -->
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-                'btn-primary':'#E76F51'
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'btn-primary': '#E76F51'
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 </head>
 
 <body class="font-poppins">
@@ -71,7 +71,62 @@
         </div>
     </header>
     <!-- main Section -->
-    <main class="md:container mx-auto"></main>
+    <main class="md:container mx-auto">
+        <!-- carousal section -->
+        <div class="carousel w-full h-[550px]">
+            <!-- slide 1 -->
+            <div id="slide1" class="carousel-item relative w-full bg-red-100 p-24">
+                <div class="md:flex">
+                    <!-- text content -->
+                    <div class="flex-1 space-y-7">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-btn-primary text-white">Purchase Now</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1"><img src="images/slider/bike1.png" alt="" class="w-[440px]"></div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full bg-red-100 p-24">
+                <div class="md:flex">
+                    <!-- text content -->
+                    <div class="flex-1 space-y-7">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-btn-primary text-white">Purchase Now</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1"><img src="images/slider/bike2.png" alt="" class="w-[440px]"></div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div><div id="slide3" class="carousel-item relative w-full bg-red-100 p-24">
+                <div class="md:flex">
+                    <!-- text content -->
+                    <div class="flex-1 space-y-7">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-btn-primary text-white">Purchase Now</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1"><img src="images/slider/bike3.png" alt="" class="w-[440px]"></div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- Footer Section -->
     <footer></footer>
 </body>
